# discovery

./: CHANGELOG.md  CMakeLists.txt  README.md  vix.json
.github/workflows/: discovery-ci.yml
cmake/: softadastra_discoveryConfig.cmake.in
docs/: guide.md
examples/: CMakeLists.txt  discovery_announcer.cpp  discovery_listener.cpp  discovery_roundtrip_demo.cpp
include/softadastra/discovery/: DiscoveryOptions.hpp  DiscoveryService.hpp  Peer.hpp  discovery.hpp
include/softadastra/discovery/backend/: IDiscoveryBackend.hpp  UdpDiscoveryBackend.hpp
include/softadastra/discovery/client/: DiscoveryClient.hpp
include/softadastra/discovery/core/: DiscoveryAnnouncement.hpp  DiscoveryConfig.hpp  DiscoveryContext.hpp  DiscoveryEnvelope.hpp  DiscoveryMessage.hpp
include/softadastra/discovery/encoding/: DiscoveryDecoder.hpp  DiscoveryEncoder.hpp
include/softadastra/discovery/engine/: DiscoveryEngine.hpp
include/softadastra/discovery/peer/: DiscoveredPeer.hpp  DiscoveryRegistry.hpp
include/softadastra/discovery/platform/linux/: UdpSocket.hpp
include/softadastra/discovery/platform/windows/: UdpSocket.hpp
include/softadastra/discovery/server/: DiscoveryServer.hpp
include/softadastra/discovery/types/: DiscoveryMessageType.hpp  DiscoveryPeerState.hpp  DiscoveryStatus.hpp
include/softadastra/discovery/utils/: Datagram.hpp
platform/linux/: UdpSocket.cpp
platform/windows/: UdpSocket.cpp
src/: DiscoveryService.cpp
src/backend/: UdpDiscoveryBackend.cpp
src/engine/: DiscoveryEngine.cpp
tests/: CMakeLists.txt
